// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swiper swiper demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper"
>
  <div
    class="t-swiper"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__swiper-wrap--horizontal"
        style="width: 400%; transform: translate3d(0%,0,0); transition: transform 0.3s;"
      >
        
        <div>
          
          <div
            class="t-alert t-alert--success"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-check-circle-filled"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM690.8655168 353.58818368L464.56401024 579.82818368 328.82684416 444.09785152 283.57201024 489.35268544 464.59134592 670.3720192 509.84617984 625.1171872 736.120352 398.8430176 690.8655168 353.58818368Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        <div>
          
          <div
            class="t-alert t-alert--info"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-info-circle-filled"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        <div>
          
          <div
            class="t-alert t-alert--warning"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-error-circle-filled"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 672L480 672 480 736 544 736 544 672ZM544 288L480 288 480 608 544 608 544 288Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        <div>
          
          <div
            class="t-alert t-alert--error"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-error-circle-filled"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 672L480 672 480 736 544 736 544 672ZM544 288L480 288 480 608 544 608 544 288Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__trigger-wrap"
    >
      
      <li
        class="t-swiper__trigger--active"
      />
      <li
        class=""
      />
      <li
        class=""
      />
      <li
        class=""
      />
      
    </ul>
  </div>
  <div
    class="t-swiper"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__swiper-wrap--horizontal"
        style="width: 400%; transform: translate3d(0%,0,0); transition: transform 0.5s;"
      >
        
        <div>
          
          <div
            class="t-alert t-alert--success"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-check-circle-filled"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM690.8655168 353.58818368L464.56401024 579.82818368 328.82684416 444.09785152 283.57201024 489.35268544 464.59134592 670.3720192 509.84617984 625.1171872 736.120352 398.8430176 690.8655168 353.58818368Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        <div>
          
          <div
            class="t-alert t-alert--info"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-info-circle-filled"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        <div>
          
          <div
            class="t-alert t-alert--warning"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-error-circle-filled"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 672L480 672 480 736 544 736 544 672ZM544 288L480 288 480 608 544 608 544 288Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        <div>
          
          <div
            class="t-alert t-alert--error"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-error-circle-filled"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 672L480 672 480 736 544 736 544 672ZM544 288L480 288 480 608 544 608 544 288Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__trigger-wrap"
    >
      
      <li
        class="t-swiper__trigger--active"
      />
      <li
        class=""
      />
      <li
        class=""
      />
      <li
        class=""
      />
      
    </ul>
  </div>
</div>
`;

exports[`Swiper vertical demo works fine 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__content"
  >
    <div
      class="t-swiper__swiper-wrap--vertical"
      style="height: 400%; transform: translate3d(0,0%,0); transition: transform 0.3s;"
    >
      
      <div>
        
        <div
          class="t-alert t-alert--success"
        >
          <div
            class="t-alert__icon"
          >
            <svg
              class="t-icon t-icon-check-circle-filled"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM690.8655168 353.58818368L464.56401024 579.82818368 328.82684416 444.09785152 283.57201024 489.35268544 464.59134592 670.3720192 509.84617984 625.1171872 736.120352 398.8430176 690.8655168 353.58818368Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class="t-alert__content"
          >
            <!---->
            <div
              class="t-alert__message"
            >
              <div
                class="t-alert__description"
              >
                【到期提醒】
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
        
      </div>
      <div>
        
        <div
          class="t-alert t-alert--info"
        >
          <div
            class="t-alert__icon"
          >
            <svg
              class="t-icon t-icon-info-circle-filled"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class="t-alert__content"
          >
            <!---->
            <div
              class="t-alert__message"
            >
              <div
                class="t-alert__description"
              >
                【到期提醒】
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
        
      </div>
      <div>
        
        <div
          class="t-alert t-alert--warning"
        >
          <div
            class="t-alert__icon"
          >
            <svg
              class="t-icon t-icon-error-circle-filled"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 672L480 672 480 736 544 736 544 672ZM544 288L480 288 480 608 544 608 544 288Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class="t-alert__content"
          >
            <!---->
            <div
              class="t-alert__message"
            >
              <div
                class="t-alert__description"
              >
                【到期提醒】
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
        
      </div>
      <div>
        
        <div
          class="t-alert t-alert--error"
        >
          <div
            class="t-alert__icon"
          >
            <svg
              class="t-icon t-icon-error-circle-filled"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 672L480 672 480 736 544 736 544 672ZM544 288L480 288 480 608 544 608 544 288Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class="t-alert__content"
          >
            <!---->
            <div
              class="t-alert__message"
            >
              <div
                class="t-alert__description"
              >
                【到期提醒】
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
        
      </div>
      
    </div>
  </div>
  <ul
    class="t-swiper__trigger-wrap"
  >
    
    <li
      class="t-swiper__trigger--active"
    />
    <li
      class=""
    />
    <li
      class=""
    />
    <li
      class=""
    />
    
  </ul>
</div>
`;
